--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-
+<h1>Active Fire Tracker (AUS/NZ)</h1>
+<p>Statistics are updated daily and taken from NASA satelite data.</p>
+<p>CURRENTLY ACTIVE FIRES: </p>
 <p th:text="${testName}"></p>
 
     <table>
