--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,12 +8,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    
 </head>
-
+<div class="container">
 <body>
 <h1>Active Fire Tracker (AUS/NZ)</h1>
 <p>Statistics are updated daily and taken from NASA satelite data.</p>
-<p>CURRENTLY ACTIVE FIRES: </p>
-<p th:text="${testName}"></p>
+<div class="jumbotron">
+    <h1 class="display-4"th:text="${totalAUS}"></h1>
+    <p class="lead">Total Australian fires</p>
+    <hr class="my-4">  
+  </div>
+
+<div class="jumbotron">
+    <h1 class="display-4"th:text="${totalNZ}"></h1>
+    <p class="lead">Total New Zealand fires</p>
+    <hr class="my-4">  
+  </div>
+
+  <p>CURRENTLY ACTIVE FIRES: </p>
 
     <table>
         <tr>
@@ -31,7 +42,6 @@
             <td th:text="${fireStat.time}">0</td>
         </tr>
     </table>
-</div>
 </body>
-
+</div>
 </html>
