table resized to fit screen

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -26,7 +26,7 @@
 
   <p>CURRENTLY ACTIVE FIRES: </p>
 
-    <table>
+    <table class = "table">
         <tr>
             <th>Country</th>
             <th>Latitude</th>
