--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,71 +1,75 @@
 <!DOCTYPE html>
 
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <title>Active Fire Tracker (AUS/NZ)</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style type="text/css">
-      .jumbotron:hover .bg-overlay {
-      height: 100%;
-      background: rgba(238,93,93,0.3);
-       }
-    </style> 
+        .jumbotron:hover .bg-overlay {
+            height: 100%;
+            background: rgba(238, 93, 93, 0.3);
+        }
+    </style>
 </head>
 <div class="container">
-<body>
-<h1>Active Fire Tracker 
-    <small class="text-muted">(AUS/NZ)</small>
-</h1>
-<p class = "lead">Statistics are updated daily and taken from NASA satelite data.</p>
 
-  <div class="jumbotron position-relative">
-   <div class = "bg-overlay"> 
-    <h1 class="display-4  text-danger"th:text="${totalAUS}"></h1>
-    <p class="lead">Total Australian fires</p>
-    <a href="AUS" class="stretched-link"></a>
-    <hr class="my-4">  
-    </div>
-  </div>
+    <body>
+        <h1>Active Fire Tracker
+            <small class="text-muted">(AUS/NZ)</small>
+        </h1>
+        <p class="lead">Statistics are updated daily and taken from NASA satelite data.</p>
 
-  <div class="jumbotron position-relative">
-    <div class = "bg-overlay"> 
-    <h1 class="display-4  text-danger"th:text="${totalNZ}"></h1>
-    <p class="lead">Total New Zealand fires</p>
-    <a href="NZ" class="stretched-link"></a>
-    <hr class="my-4">  
-   </div>
-  </div>
+        <div class="jumbotron position-relative">
+            <div class="bg-overlay">
+                <h1 class="display-4  text-danger" th:text="${totalAUS}"></h1>
+                <p class="lead">Total Australian fires</p>
+                <a href="AUS" class="stretched-link"></a>
+                <hr class="my-4">
+            </div>
+        </div>
 
-  <div class="jumbotron position-relative">
-    <div class = "bg-overlay"> 
-    <h1 class="display-4  text-danger"th:text="${totalPI}"></h1>
-    <p class="lead">Total Pacific Islands fires</p>
-    <a href="PI" class="stretched-link"></a>
-    <hr class="my-4">  
-    </div>
-  </div>
+        <div class="jumbotron position-relative">
+            <div class="bg-overlay">
+                <h1 class="display-4  text-danger" th:text="${totalNZ}"></h1>
+                <p class="lead">Total New Zealand fires</p>
+                <a href="NZ" class="stretched-link"></a>
+                <hr class="my-4">
+            </div>
+        </div>
 
-  <p >ALL CURRENTLY ACTIVE FIRES: </p>
-  <div class="p-3 mb-2 bg-secondary ">
-    <table class = "table table-hover text-white">
-        <tr>
-            <th>Country</th>
-            <th>Latitude</th>
-            <th>Longitude</th>
-            <th>Brightness</th>
-            <th>Time Detected</th>
-        </tr>
-        <tr th:each="fireStat : ${fireStats}">
-            <td th:text="${fireStat.country}"></td>
-            <td th:text="${fireStat.lat}"></td>
-            <td th:text="${fireStat.lon}"></td>
-            <td th:text="${fireStat.brightness}">0</td>
-            <td th:text="${fireStat.time}">0</td>
-        </tr>
-    </table>
+        <div class="jumbotron position-relative">
+            <div class="bg-overlay">
+                <h1 class="display-4  text-danger" th:text="${totalPI}"></h1>
+                <p class="lead">Total Pacific Islands fires</p>
+                <a href="PI" class="stretched-link"></a>
+                <hr class="my-4">
+            </div>
+        </div>
 
-  </div>
-</body>
+        <p>ALL CURRENTLY ACTIVE FIRES: </p>
+        <div class="p-3 mb-2 bg-secondary ">
+            <table class="table table-hover text-white">
+                <tr>
+                    <th>Country</th>
+                    <th>Latitude</th>
+                    <th>Longitude</th>
+                    <th>Brightness</th>
+                    <th>Time Detected</th>
+                </tr>
+                <tr th:each="fireStat : ${fireStats}">
+                    <td th:text="${fireStat.country}"></td>
+                    <td th:text="${fireStat.lat}"></td>
+                    <td th:text="${fireStat.lon}"></td>
+                    <td th:text="${fireStat.brightness}">0</td>
+                    <td th:text="${fireStat.time}">0</td>
+                </tr>
+            </table>
+
+        </div>
+    </body>
 </div>
+
 </html>
