--- a/src/main/resources/templates/nz.html
+++ b/src/main/resources/templates/nz.html
@@ -26,7 +26,7 @@
                     <th>Time Detected</th>
                 </tr>
                 <tr th:each="fireStat : ${nzStats}">
-                    <td th:text="${fireStat.country}"></td>
+                    <td th:text="${fireStat.area}"></td>
                     <td th:text="${fireStat.lat}"></td>
                     <td th:text="${fireStat.lon}"></td>
                     <td th:text="${fireStat.brightness}">0</td>
