Totals for each area are calculated and displayed

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,7 +20,7 @@
         <h1>Active Fire Tracker
             <small class="text-muted">(AUS/NZ)</small>
         </h1>
-        <p class="lead">Statistics are updated daily and taken from NASA satelite data.</p>
+        <p class="lead">Statistics are automatically updated daily and taken from NASA satelite data.</p>
 
         <div class="jumbotron position-relative">
             <div class="bg-overlay">
