--- a/src/main/resources/templates/nz.html
+++ b/src/main/resources/templates/nz.html
@@ -7,6 +7,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <style type="text/css">
+        .w3-container {
+            display: flex
+        }
+    </style>
 </head>
 <div class="container">
 
@@ -15,7 +20,20 @@
             <small class="text-muted">Active Fires:</small>
         </h1>
 
-        <h1 class="display-4  text-danger" th:text="${totalNZ}"></h1>
+        <div class="row">
+            <div class="w3-container gap-5">
+                <div class="jumbotron text-center col-md-1.99">
+                    <h1 class="display-4  text-danger" th:text="${northTotal}"></h1>
+                    <p>North Island Fires</p>
+                </div>
+
+                <div class="jumbotron text-center col-md-1.99">
+                    <h1 class="display-4  text-danger" th:text="${southTotal}"></h1>
+                    <p>South Island Fires</p>
+                </div>
+            </div>
+        </div>
+
         <div class="p-3 mb-2 bg-secondary ">
             <table class="table table-hover text-white">
                 <tr>
