--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,8 +16,10 @@
     <script language="javascript" type="text/javascript">
         $(document).ready(function () {
             $('#dataTable').DataTable();
-        });
+        });   
     </script>
+
+    
 
     <style type="text/css">
         .jumbotron:hover .bg-overlay {
@@ -66,8 +68,9 @@
         <p>ALL CURRENTLY ACTIVE FIRES: </p>
 
         <div class="p-3 mb-2 bg-secondary">
-            <table class="table table-striped table-hover " id="dataTable" data-page-length='25'
+            <table class="table table-striped table-hover" id="dataTable" data-page-length='25'
                 data-order='[[0, "desc"]]'>
+
                 <thead class="text-white">
                     <tr>
 
@@ -76,20 +79,30 @@
                         <th scope="col">Longitude</th>
                         <th scope="col">Brightness</th>
                         <th scope="col">Time Detected</th>
-
+                        <th scope="col">MAP</th>
                     </tr>
                 </thead>
 
                 <tbody>
                     <tr th:each="fireStat :${fireStats}">
+
+                        <span id= "span_id" style="display: none;" th:text="${fireStat.id}"></span>
+
+                        
+
                         <td th:text="${fireStat.country}"></td>
                         <td th:text="${fireStat.lat}"></td>
                         <td th:text="${fireStat.lon}"></td>
                         <td th:text="${fireStat.brightness}"></td>
-                        <td th:text="${fireStat.time}"></td>
+                        <td th:text="${fireStat.time}"></td>                        
+                        <td><a href="info" onclick="location.href=this.href+'?id='+fireId;return false;">View</a></td>                
                     </tr>
                 </tbody>
             </table>
+            <script language="javascript" type="text/javascript">
+                var fireID = document.getElementById("span_id").innerHTML;
+                var fireId = $('#span_id').text() 
+                </script>
         </div>
     </body>
 </div>
