css edit to home page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -26,6 +26,9 @@
             height: 100%;
             background: rgba(238, 93, 93, 0.3);
         }
+
+        h1 {color: rgb(216, 38, 38);};
+
     </style>
 
 </head>
@@ -33,7 +36,7 @@
 <div class="container">
 
     <body>
-        <h1>Active Fire Tracker
+        <h1 style  = "background-color: rgb(255, 226, 60)">Active Fire Tracker
             <small class="text-muted">(AUS/NZ)</small>
         </h1>
         <p class="lead">Statistics are automatically updated daily and taken from NASA satelite data.</p>
