/{id} link prints info about a selected fire

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -82,6 +82,7 @@
                         <th scope="col">Longitude</th>
                         <th scope="col">Brightness</th>
                         <th scope="col">Time Detected</th>
+                        <th scope="col">Map</th>
                     </tr>
                 </thead>
 
@@ -92,7 +93,8 @@
                         <td th:text="${fireStat.lat}"></td>
                         <td th:text="${fireStat.lon}"></td>
                         <td th:text="${fireStat.brightness}"></td>
-                        <td th:text="${fireStat.time}"></td>                                                        
+                        <td th:text="${fireStat.time}"></td>   
+                        <td><a th:href="@{/{id}(id=${fireStat.id})}">view</a></td>                                                                       
                     </tr>
                 </tbody>
             </table>
