Added map features. Click on a fire to view it on the map. Map is powered by Mapbox.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -94,7 +94,7 @@
                         <td th:text="${fireStat.lon}"></td>
                         <td th:text="${fireStat.brightness}"></td>
                         <td th:text="${fireStat.time}"></td>   
-                        <td><a th:href="@{/{id}(id=${fireStat.id})}">view</a></td>                                                                       
+                        <td><a th:href="@{map/{id}(id=${fireStat.id})}">view</a></td>                                                                       
                     </tr>
                 </tbody>
             </table>
